--- a/.gitconfig
+++ b/.gitconfig
@@ -1,4 +1,4 @@
-user]
+[user]
         email = email
         name = name
 [color]
@@ -8,15 +8,6 @@ user]
         branch = auto
         interactive = auto
         grep = auto
-[alias]
-        st = status
-        ci = commit
-#       lg = log --graph --date=iso --pretty='%C(yellow)%h%Creset %C(cyan bold)%d%Creset %s %Cgreen[%cd]%Creset' --decorate --all --stat
-        lg = log --graph --date=iso --pretty='%C(blue)%an %C(yellow)%h%Creset %C(cyan bold)%d%Creset %s %Cgreen[%cd]%Creset' --decorate --all --stat
- 
- 
-#  lg = log --graph --decorate --oneline --abbrev --relative-date --topo-order
-#  lga = log --graph --decorate --oneline --abbrev --relative-date --topo-order --all
 [merge]
         ff = false
 [core]
@@ -25,13 +16,6 @@ user]
  
 [push]
     default = tracking
-[color]
-    ui = auto
-    status = auto
-    diff = auto
-    branch = auto
-    interactive = auto
-    grep = auto
 [alias]
     co = checkout
     st = status
